--- a/move1.html
+++ b/move1.html
@@ -14,6 +14,8 @@
         integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./cs/style.css">
+    <link rel="stylesheet" href="./cs/js.css">
+
 </head>
 
 <body>
@@ -161,8 +163,8 @@
                             <div><span>1星 </span><hr class="hr1"> <span>0.4%</span></div>
                         </div>
                         <div class="mtbo bdt">
-                            <p class="mpz tal"><span> 好于</span><a href=""> 98%科幻片</a></p>
-                            <p class="mpz tal"><span> 好于</span><a href=""> 98%冒险片</a></p>
+                            <p class="mpz talm"><span> 好于</span><a href=""> 98%科幻片</a></p>
+                            <p class="mpz talm"><span> 好于</span><a href=""> 98%冒险片</a></p>
                         </div>
                         
                     </div>
@@ -213,8 +215,8 @@
                 <h4 class="mtbo coq">头号玩家的剧情简介 · · · · · ·</h4>
                 <p>故事发生在2045年，虚拟现实技术已经渗透到了人类生活的每一个角落。詹姆斯哈利迪（马克·里朗斯 Mark Rylance 饰）一手建造了名为“绿洲”的虚拟现实游戏世界，临终前，他宣布自己在游戏中设置了一个彩蛋，找到这枚彩蛋的人即可成为绿洲的继承人。要找到这枚彩蛋，必须先获得三把钥匙，而寻找钥匙的线索就隐藏在詹姆斯的过往之中。</p>
                 <p>韦德（泰尔·谢里丹 Tye Sheridan 饰）、艾奇（丽娜·维特 Lena Waithe 饰）、大东（森崎温 饰）和修（赵家正 饰）是游戏中的好友，和之后遇见的阿尔忒弥斯（奥利维亚·库克 Olivia Cooke 饰）一起，五人踏上了寻找彩蛋的征程。他们所要对抗的，是名为诺兰索伦托（本·门德尔森 Ben Mendelsohn 饰）的大资本家。 <a href="">©豆瓣</a> </p>
-                <div class="show">
-                    <div class="box">
+                <div class="showjs">
+                    <div class="boxjs">
                         <img src="./images/3d1.jpeg" class="img1">
                         <img src="./images/3d2.jpeg" class="img2">
                         <img src="./images/3d3.jpg" class="img3">
@@ -235,7 +237,7 @@
                     <div class="mtbo">
                         <button>热门</button>&emsp;<span>/</span>&emsp;<button>最新</button>&emsp;<span>/</span>&emsp;<button>好友</button>
                     </div>
-                    <div class="mtbo">
+                    <div class="mtbo bdtb">
                         <div>
                             <a href="">影人</a>
                             <span>看过</span>
