--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="card-body">
                         <h5 class="card-title">无限行驶</h5>
                         <p class="card-text">速度激情，空间无限</p>
-                        <a href="#" class="btn btn-primary">了解详情</a>
+                        <a href="recsb1.html" class="btn btn-primary">了解详情</a>
                     </div>
                 </div>
             </div>
