--- a/recsb1.html
+++ b/recsb1.html
@@ -93,41 +93,45 @@
                 <h5>VR全景虚拟现实罗技赛车驾驶套装</h5>
                 <div class="bgc ptbo mtbo">
                     <span class="spw">价格</span>
-                    <span><i class="fas fa-yen-sign"></i> 29887.00</span>
+                    <span><i class="fas fa-yen-sign"></i><span id="dj">29887.00</span> </span>
                 </div>
                 <div class="bdo mtbo">
                     <span>累计评价<a href="">0</a></span>
                     <span>送天猫积分<a href="">2988</a></span>
                 </div>
-                <div>
-                    <span>颜色分配</span>
+                <div class="mtbo">
+                    <span class="spw">库存</span>
+                    <span id="kc">16</span>
+                </div>
+                <div class="mtbo">
+                    <span class="spw">颜色分配</span>
                     <button type="button" class="btn btn-primary">星空蓝</button>
                     <button type="button" class="btn btn-dark">曜石黑</button>
                     <button type="button" class="btn btn-danger">火焰红</button>
                 </div>
-                <div>
-                    <span>数量</span>
-                    <input type="text" value="1">
-                    <button>+</button>
-                    <button>-</button>
+                <div class="mtbo">
+                    <span class="spw">数量</span>
+                    <input type="text" value="1" id="sl">
+                    <button id="add">+</button>
+                    <button id="min">-</button>
                 </div>
-                <div>
-                    <span>付款方式</span>
+                <div class="mtbo">
+                    <span class="spw">付款方式</span>
                     <select class="txt" name="" id="">
                         <option value="">微&nbsp;信</option>
                         <option value="" selected>支付宝</option>
                         <option value="">信用卡</option>
                     </select>
                 </div>
-                <div>
-                    <span>总价</span>
-                    <span>29887.00</span>
+                <div class="mtbo">
+                    <span class="spw">总价</span>
+                    <span id="bsum">29887.00</span>
                 </div>
-                <div>
+                <div class="btn">
                     <button>立即购买</button>
                     <button><i class="fas fa-cart-plus"></i> 加入购物车</button>
                 </div>
-                <div>
+                <div class="mtbo">
                     <span>服务承若</span>
                     <a href="">不支持七天无理由退换</a>
                     <a href="">正品保证</a>
@@ -191,5 +195,47 @@
 <script>
 $("#xcard img").click(function(){
     $("#bcard").attr($(this)[0]);
+});
+/*
+    var val = $("#sl").val()
+    var sl = $("#sl")
+    var kc = $("#kc").html();
+$("#dwn").attr('disabled',true);
+
+$("#dup").click(function(){
+    var val = $("#sl").val()
+    sl.val(parseInt(sl.val())+1)
+    if(parseInt(sl.val())!=1){
+        $('#dwn').attr('disabled',false)
+        console.log(val)
+    }
 })
+$("#dwn").click(function(){
+    sl.val(parseInt(sl.val())-1)
+    if(parseInt(sl.val())==1){
+        $('#dwn').attr('disabled',true)
+        
+
+    }
+})
+*/
+var add = document.getElementById("add");
+var min = document.getElementById("min");
+var sl = document.getElementById("sl").value;
+var dj = document.getElementById("dj").innerHTML;
+var kc = document.getElementById("kc").innerHTML;
+add.onclick=function(){
+    if(sl<kc){
+        sl++;
+        document.getElementById("sl").value=sl;
+        document.getElementById("bsum").innerHTML = sl*dj+'.00';
+    }
+}
+min.onclick=function(){
+    if(sl>1){
+        sl--;
+        document.getElementById("sl").value=sl;
+        document.getElementById("bsum").innerHTML = sl*dj+'.00';
+    }
+}
 </script>
