--- a/recsb1.html
+++ b/recsb1.html
@@ -77,67 +77,103 @@
     </header>
     <div class="container mt">
         <div class="row">
-            <div class="col-lg-6 mwg">
-                <i class="fas fa-chevron-left" id="sblt"></i>
-                <i class="fas fa-chevron-right" id="sbrt"></i>
+            <div class="col-lg-5 mwg mbo">
+                <!-- <i class="fas fa-chevron-left" id="sblt"></i>
+                <i class="fas fa-chevron-right" id="sbrt"></i> -->
                 <img id="bcard" src="images/sb6.jpg" alt="">
                 <div class="recflex" id="xcard">
                     <img src="images/sb6.jpg" alt="">
                     <img src="images/recsb1.jpg" alt="">
                     <img src="images/recsb2.jpg" alt="">
-                    <img src="images/recsb3.jpg" alt="">
                     <img src="images/recsb4.png" alt="">
                 </div>
             </div>
-            <div class="col-lg-5">
-                <h5>VR全景虚拟现实罗技赛车驾驶套装</h5>
-                <div class="bgc ptbo mtbo">
-                    <span class="spw">价格</span>
-                    <span><i class="fas fa-yen-sign"></i><span id="dj">29887.00</span> </span>
+            <div class="col-lg-7 sbfx">
+                <div>
+                    <h5>VR全景虚拟现实罗技赛车驾驶套装</h5>
+                    <div class="bgc ptbo mtbo">
+                        <span class="spw">价格</span>
+                        <span><i class="fas fa-yen-sign"></i><span id="dj">29887.00</span> </span>
+                    </div>
+                    <div class="bdo mtbo">
+                        <span>累计评价<a href="">0</a></span>
+                        <span>送天猫积分<a href="">2988</a></span>
+                    </div>
+                    <div class="mtbo">
+                        <span class="spw">库存</span>
+                        <span id="kc">16</span>
+                    </div>
+                    <div class="mtbo">
+                        <span class="spw">颜色分配</span>
+                        <button type="button" class="btn btn-primary">星空蓝</button>
+                        <button type="button" class="btn btn-dark">曜石黑</button>
+                        <button type="button" class="btn btn-danger">火焰红</button>
+                    </div>
+                    <div class="mtbo">
+                        <span class="spw">数量</span>
+                        <input type="text" value="1" id="sl">
+                        <button id="add">+</button>
+                        <button id="min">-</button>
+                    </div>
+                    <div class="mtbo">
+                        <span class="spw">付款方式</span>
+                        <select class="txt" name="" id="pay">
+                            <option value="">微&emsp;信</option>
+                            <option value="" selected>支付宝</option>
+                            <option value="">信用卡</option>
+                        </select>
+                    </div>
+                    <div class="mtbo">
+                        <span class="spw">总价</span>
+                        <span id="bsum">29887.00</span>
+                    </div>
+                    <div class="bton">
+                        <button>立即购买</button>
+                        <button><i class="fas fa-cart-plus"></i> 加入购物车</button>
+                    </div>
+                    <div class="mtbo fw">
+                        <span>服务承若</span>
+                        <div>
+                        <a href="">不支持七天无理由退换</a>
+                        <a href="">正品保证</a>
+                        <a href="">延保服务</a>
+                        <a href="">极速退款</a>
+                        <a href="">赠运费险</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="bdo mtbo">
-                    <span>累计评价<a href="">0</a></span>
-                    <span>送天猫积分<a href="">2988</a></span>
-                </div>
-                <div class="mtbo">
-                    <span class="spw">库存</span>
-                    <span id="kc">16</span>
-                </div>
-                <div class="mtbo">
-                    <span class="spw">颜色分配</span>
-                    <button type="button" class="btn btn-primary">星空蓝</button>
-                    <button type="button" class="btn btn-dark">曜石黑</button>
-                    <button type="button" class="btn btn-danger">火焰红</button>
-                </div>
-                <div class="mtbo">
-                    <span class="spw">数量</span>
-                    <input type="text" value="1" id="sl">
-                    <button id="add">+</button>
-                    <button id="min">-</button>
-                </div>
-                <div class="mtbo">
-                    <span class="spw">付款方式</span>
-                    <select class="txt" name="" id="">
-                        <option value="">微&nbsp;信</option>
-                        <option value="" selected>支付宝</option>
-                        <option value="">信用卡</option>
-                    </select>
-                </div>
-                <div class="mtbo">
-                    <span class="spw">总价</span>
-                    <span id="bsum">29887.00</span>
-                </div>
-                <div class="btn">
-                    <button>立即购买</button>
-                    <button><i class="fas fa-cart-plus"></i> 加入购物车</button>
-                </div>
-                <div class="mtbo">
-                    <span>服务承若</span>
-                    <a href="">不支持七天无理由退换</a>
-                    <a href="">正品保证</a>
-                    <a href="">延保服务</a>
-                    <a href="">极速退款</a>
-                    <a href="">赠运费险</a>
+                    <div class="lun">
+                        <span>猜你喜欢</span>
+                        <ul>
+                            <li>
+                                <img src="images/sb1.jpg" alt="">
+                                <p><i class="fas fa-yen-sign"></i>11888.00</p>
+                            </li>
+                            <li>
+                                <img src="images/sb2.jpg" alt="">
+                                <p><i class="fas fa-yen-sign"></i>11888.00</p>
+                            </li>
+                            <li>
+                                <img src="images/sb3.jpg" alt="">
+                                <p><i class="fas fa-yen-sign"></i>11888.00</p>
+                            </li>
+                            <li>
+                                <img src="images/sb4.jpg" alt="">
+                                <p><i class="fas fa-yen-sign"></i>11888.00</p>
+                            </li>
+                            <li>
+                                <img src="images/sb5.jpg" alt="">
+                                <p><i class="fas fa-yen-sign"></i>11888.00</p>
+                            </li>
+                            <li>
+                                <img src="images/sb6.jpg" alt="">
+                                <p><i class="fas fa-yen-sign"></i>11888.00</p>
+                            </li>
+                        </ul>
+                        <i class="fas fa-chevron-up" id="sup"></i>
+                        <i class="fas fa-chevron-down" id="sdn"></i>
+                    </div>
+
                 </div>
             </div>
         </div>
