--- a/move1.html
+++ b/move1.html
@@ -247,6 +247,10 @@
                             堪比“黑客帝国”的虚拟与现实切换，但没有苦大仇深的哲学思考，而是带着娱乐至死的精神，把影视游戏各种流行文化致敬了个遍  
                         </p>
                     </div>
+                    <form action="move1.php" method="post">
+                        <textArea class="pilun"></textArea>
+                        <input type="button" value="提交" name="cont">
+                    </form>
                 </div>
             </div>
             <div class="col-lg-3 pto">
